created sendgridemail functions

--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@strapi/plugin-i18n": "4.15.4",
     "@strapi/plugin-seo": "^1.9.8",
     "@strapi/plugin-users-permissions": "4.15.4",
+    "@strapi/provider-email-sendgrid": "^4.15.5",
     "@strapi/strapi": "4.15.4",
     "better-sqlite3": "8.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
     "strapi-advanced-uuid": "^1.1.4",
+    "strapi-plugin-email-designer": "^2.2.0",
     "strapi-plugin-rest-cache": "^4.2.8",
     "strapi-plugin-schemas-to-ts": "^1.1.21",
     "styled-components": "5.3.3"
