--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@strapi/plugin-seo": "^1.9.8",
     "@strapi/plugin-users-permissions": "4.15.4",
     "@strapi/provider-email-sendgrid": "^4.15.5",
+    "@strapi/provider-upload-aws-s3": "^4.15.5",
     "@strapi/strapi": "4.15.4",
     "better-sqlite3": "8.6.0",
     "react": "^18.0.0",
